SERVER-2988 give error message when initial version can't be written on mongos startup